--- a/package.json
+++ b/package.json
@@ -21,7 +21,13 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@types/bootstrap-datepicker": "0.0.12",
+    "@types/jquery": "^1.10.34",
+    "bootstrap-datepicker": "^1.7.1",
+    "bootstrap-datepicker-year-offset": "^1.0.3",
     "core-js": "^2.4.1",
+    "jquery": "^3.3.1",
+    "ngq-datepicker": "0.0.5",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
